# BART_SURVIVAL

./: .gitignore  README.md  diagram.drawio  manifest.in  old_setup.py  pyproject.toml  setup.py  tmp.ipynb  tmp.txt  tmp2.ipynb  todo.txt
bart_survival.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/source/: api.rst  conf.py  index.rst  simulation.rst  surv_bart.rst  true_example.rst  user_guide.rst
docs/source/artifacts/: example1.html
examples/: example1.html  example1.ipynb  example2.html  example2.ipynb  example2_1.ipynb
examples/.ipynb_checkpoints/: exampl2-checkpoint.ipynb
src/: __init__.py  simulation.py  surv_bart.py
src/bart_survival/: __init__.py  case_cohort.py  extras.py  simulation.py  surv_bart.py  test.py  version.py
src/bart_survival.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bart_survival.py  test_simulation.py
