[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BART_SURVIVAL"
version = "0.0.1"
authors = [
  { name="Jacob Tiegs", email="twj8@cdc.gov" },
]
description = "Non-Parametric Discrete Time Survival Analyses using Bayesian Additive Regresison Trees"
readme = "README.md"
requires-python = ">=3.8" 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/..."
Issues = "https://github.com/..."

[tool.hatch.build.targets.sdist]
include = [
  "src/*.py"
]
exclude = [
  "tests/",
  "docs/",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/"
]