[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bart_survival"
authors = [
    {name = "Jacob Tiegs", email = "tiegsjacob@gmail.com"},
]
description = "Survival analyses with Bayesian Additivie Regression Trees."
version = "0.0.1.3"
dependencies = [
    "numpy",
    "scipy",
    "typing",
    "pathlib",
    'pymc; python_version<="5.10.3"',
    'pymc_bart; python_version<="0.5.7"',
    "cloudpickle"
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["bart_survival"]  
exclude = ["additional"]
namespaces = false